# pybind_embedded_struct_roundtrip_example

./: CMakeLists.txt  README.md
ifc_lib/: CMakeLists.txt  library.cpp  library.h  my_class.cpp  my_class.h  my_pybind.cpp  my_pybind.h  my_utils.h
src_python/: CMakeLists.txt  example.py
test_driver/: CMakeLists.txt  ex_struct.h  main.cpp
